@@ -14,7 +14,7 @@ set_time_limit(0);
 /* define package */
 define('PKG_NAME','GitPackageManagement');
 define('PKG_NAME_LOWER',strtolower(PKG_NAME));
-define('PKG_VERSION','0.6.1');
+define('PKG_VERSION','0.7.0');
 define('PKG_RELEASE','alpha');
 
 /* define sources */
